Scrollable row component: Fix buttons z-index

--- a/src/client/components/Row/index.less
+++ b/src/client/components/Row/index.less
@@ -9,6 +9,7 @@
         overflow: hidden;
         position: relative;
         left: 0;
+        z-index: 0;
 
         > .row {
             justify-content: flex-start;
